kong-gw/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-http-route
  namespace: kong
spec:
  parentRefs:
    - name: kong
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fastapi-service
          namespace: kong
          kind: Service
          port: 80
